apps/harbor/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: harbor-endpoints # Must be equal to Service name for automatic mapping
  namespace: rancher
subsets:
- addresses:
  - ip: 192.168.50.106 # IP address of your external service that you would like to proxy requests to
  ports:
  - port: 80
