apps/harbor/endpointslice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:  
  name: harbor-endpointslice
  namespace: rancher
  labels:
    kubernetes.io/service-name: harbor-service # Must be present for EndpointSlice and equal to Service name for automatic mapping - with having it in place, you can change the name of EndpointSlice to something else. The official convention is using Service name as the prefix.
addressType: IPv4
ports:
  - port: 80
endpoints:
  - addresses:
    - "192.168.50.106" # IP address of your external service that you would like to proxy requests to
    conditions: {}

---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:  
  name: harbor-service
  namespace: rancher
  labels:
    kubernetes.io/service-name: harbor-service # Must be present for EndpointSlice and equal to Service name for automatic mapping - with having it in place, you can change the name of EndpointSlice to something else. The official convention is using Service name as the prefix.
addressType: IPv4
ports:
  - port: 80
endpoints:
  - addresses:
    - "192.168.50.106" # IP address of your external service that you would like to proxy requests to
    conditions: {}
