apps/harbor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: harbor-service
  namespace: rancher
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 443
      name: https
